Add MeshNode Listener

--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -88,6 +88,17 @@ Resources:
       MeshOwner: !ImportValue cfn-metadata:SharedAccountId
       VirtualNodeName: discord
       Spec:
+        Listeners:
+          - PortMapping:
+              Port: 80
+              Protocol: http2
+            HealthCheck:
+              UnhealthyThreshold: 3
+              HealthyThreshold: 5
+              TimeoutMillis: 30
+              Path: /healthcheck
+              Protocol: http2
+              IntervalMillis: 30
         ServiceDiscovery:
           AWSCloudMap:
             NamespaceName: !ImportValue brighid-infrastructure:ServiceRegistry
