--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -78,6 +78,8 @@ Resources:
       VirtualServiceName: discord
       Spec:
         Provider:
+          VirtualRouter:
+            VirtualRouterName: !GetAtt MeshRouter.VirtualRouterName
           VirtualNode:
             VirtualNodeName: !GetAtt MeshNode.VirtualNodeName
 
@@ -103,6 +105,37 @@ Resources:
           AWSCloudMap:
             NamespaceName: !ImportValue brighid-infrastructure:ServiceRegistry
             ServiceName: discord
+
+  MeshRouter:
+    Type: AWS::AppMesh::VirtualRouter
+    Properties:
+      MeshName: brighid-mesh
+      MeshOwner: !ImportValue cfn-metadata:SharedAccountId
+      VirtualRouterName: discord
+      Spec:
+        Listeners:
+          - PortMapping:
+              Port: 80
+              Protocol: http2
+
+  MeshRoute:
+    Type: AWS::AppMesh::Route
+    Properties:
+      MeshName: brighid-mesh
+      MeshOwner: !ImportValue cfn-metadata:SharedAccountId
+      VirtualRouterName: !GetAtt MeshRouter.VirtualRouterName
+      Spec:
+        Http2Route:
+          Action:
+            WeightedTargets:
+              - VirtualNode: !GetAtt MeshNode.VirtualNodeName
+                Weight: 1
+          Match:
+            Prefix: /
+            Headers:
+              - Name: host
+                Match:
+                  Exact: !Ref DomainName
 
   ServiceRegistryRecord:
     Type: AWS::ServiceDiscovery::Service
