--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -73,13 +73,17 @@ Parameters:
     Type: String
     Description: Image to use for the Envoy Sidecar.
 
+  MeshServiceName:
+    Type: String
+    Description: Name to use in the App Mesh.
+
 Resources:
   MeshService:
     Type: AWS::AppMesh::VirtualService
     Properties:
       MeshName: brighid-mesh
       MeshOwner: !ImportValue cfn-metadata:SharedAccountId
-      VirtualServiceName: !Ref DomainName
+      VirtualServiceName: !Ref MeshServiceName
       Spec:
         Provider:
           VirtualNode:
@@ -90,7 +94,7 @@ Resources:
     Properties:
       MeshName: brighid-mesh
       MeshOwner: !ImportValue cfn-metadata:SharedAccountId
-      VirtualNodeName: !Ref DomainName
+      VirtualNodeName: !Ref MeshServiceName
       Spec:
         Listeners:
           - PortMapping:
@@ -114,7 +118,7 @@ Resources:
       MeshName: brighid-mesh
       MeshOwner: !ImportValue cfn-metadata:SharedAccountId
       VirtualGatewayName: internet
-      GatewayRouteName: !Ref DomainName
+      GatewayRouteName: !Ref MeshServiceName
       Spec:
         HttpRoute:
           Action:
