Revert "Use Host Header Match"
This reverts commit 309398bb5ef1bc3dab743f2743fe9675d09658c9.

--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -128,10 +128,8 @@ Resources:
                 VirtualServiceName: !GetAtt MeshService.VirtualServiceName
           Match:
             Prefix: /
-            Headers:
-              - Name: host
-                Match:
-                  Exact: !Ref DomainName
+            Hostname:
+              Exact: !Ref DomainName
 
   ServiceRegistryRecord:
     Type: AWS::ServiceDiscovery::Service
