--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -121,7 +121,7 @@ Resources:
       VirtualGatewayName: internet
       GatewayRouteName: !Ref MeshNodeName
       Spec:
-        HttpRoute:
+        Http2Route:
           Action:
             Target:
               VirtualService:
