--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
 version: "3.4"
 services:
+  traefik:
+    image: traefik:v2.4
+    container_name: traefik
+    command:
+      - --api.insecure=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+    ports:
+      - 80:80
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+
   adapter:
     image: mcr.microsoft.com/dotnet/sdk:5.0.301
     entrypoint: dotnet watch --project src/Adapter run
     working_dir: /app
     restart: unless-stopped
     ports:
-      - 80:80
+      - "80"
     volumes:
       - ./:/app
       - ~/.aws:/root/.aws
@@ -28,6 +41,11 @@ services:
       Adapter__Token: ${ADAPTER_TOKEN}
       Metrics__Namespace: ${METRICS_NAMESPACE}
       AWS_REGION: us-east-1
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.adapter.rule=Host(`localhost`)
+      - traefik.http.routers.adapter.entrypoints=web
+      - traefik.http.services.adapter.loadbalancer.server.scheme=h2c
 
   db:
     image: mariadb/server:10.4
