--- a/cicd.template.yml
+++ b/cicd.template.yml
@@ -192,6 +192,7 @@ Resources:
         ProdRoleArn: !ImportValue cfn-metadata:ProdAgentRoleArn
         SharedRoleArn: !ImportValue cfn-utilities:MasterRoleArn
         ApprovalNotificationFunction: !ImportValue cfn-core:ApprovalNotificationFunctionArn
+        EcsDeploymentFunction: !ImportValue cfn-core:EcsDeploymentFunctionArn
         FileFromZipArn: !ImportValue cfn-core:ExtractFileFromZipFunctionArn
         AccountId: !Ref AWS::AccountId
     Metadata:
