--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -174,6 +174,7 @@ Resources:
     Type: AWS::ECS::Service
     Properties:
       Cluster: !ImportValue brighid-infrastructure:ClusterName
+      ServiceName: discord-adapter
       LaunchType: FARGATE
       NetworkConfiguration:
         AwsvpcConfiguration:
