Docker Image Optimizations

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -3,7 +3,7 @@
         <ItemGroup>
             <DockerBuildArgs Include="--file $(MSBuildProjectDirectory)\Dockerfile" />
             <DockerBuildArgs Include="--tag $(DockerImageTag)" />
-            <DockerBuildArgs Include="--build-arg OUTPUT_DIRECTORY=$([MSBuild]::MakeRelative($(MSBuildThisFileDirectory), $(OutputPath)))" />
+            <DockerBuildArgs Include="--build-arg OUTPUT_DIRECTORY=$([MSBuild]::MakeRelative($(MSBuildThisFileDirectory), $(OutputPath)))publish" />
             <DockerBuildArgs Include="--build-arg PROJECT_DIRECTORY=$([MSBuild]::MakeRelative($(MSBuildThisFileDirectory), $(MSBuildProjectDirectory)))" />
             <DockerBuildArgs Include="--build-arg ASPNET_VERSION=$(BundledNETCoreAppPackageVersion)" />
             <DockerBuildArgs Include="--build-arg ASSEMBLY_NAME=$(AssemblyName)" />
