Brighid Base Image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
   adapter: 
-    image: mcr.microsoft.com/dotnet/sdk:5.0.401
+    image: mcr.microsoft.com/dotnet/sdk:5.0.401-alpine3.14
     entrypoint: dotnet watch --project src/Adapter run
     working_dir: /app
     restart: unless-stopped
