Update Base Image to 0.1.2

--- a/src/Adapter/Dockerfile
+++ b/src/Adapter/Dockerfile
@@ -1,14 +1,11 @@
 ARG CONFIGURATION=Release
 
-FROM public.ecr.aws/cythral/brighid/base:0.1.1
+FROM public.ecr.aws/cythral/brighid/base:0.1.2
 ARG PROJECT_DIRECTORY
 ARG OUTPUT_DIRECTORY
 ARG CONFIGURATION
 
-ENV \
-    CONFIGURATION=${CONFIGURATION} \
-    DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true
-
+ENV CONFIGURATION=${CONFIGURATION}
 WORKDIR /app
 COPY ${PROJECT_DIRECTORY}/entrypoint.sh ${OUTPUT_DIRECTORY} ./
 
