--- a/src/Adapter/Dockerfile
+++ b/src/Adapter/Dockerfile
@@ -1,16 +1,17 @@
 ARG CONFIGURATION=Release
 
-FROM public.ecr.aws/cythral/brighid/base:0.1.4
+FROM public.ecr.aws/cythral/brighid/base:0.1.9
 ARG PROJECT_DIRECTORY
 ARG OUTPUT_DIRECTORY
 ARG CONFIGURATION
 
 ENV CONFIGURATION=${CONFIGURATION}
 WORKDIR /app
-COPY ${PROJECT_DIRECTORY}/entrypoint.sh ${OUTPUT_DIRECTORY} ./
+COPY ${PROJECT_DIRECTORY}/entrypoint.sh /
+COPY ${OUTPUT_DIRECTORY} ./
 
-RUN chmod +x /app/entrypoint.sh && \
+RUN chmod +x /entrypoint.sh && \
     setcap 'cap_net_bind_service=+ep' /app/Adapter
 
 EXPOSE 80
-ENTRYPOINT /app/entrypoint.sh
+ENTRYPOINT [ "/entrypoint.sh" ]
