--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.9"
 services:
   traefik:
     image: traefik:v2.5
@@ -47,7 +47,7 @@ services:
       - traefik.http.services.adapter.loadbalancer.server.scheme=h2c
 
   db:
-    image: mariadb/server:10.5
+    image: mariadb:10.5
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${DB_NAME}
@@ -56,6 +56,11 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: "true"
     volumes:
       - my-db:/var/lib/mysql
+
+  envoy:
+    image: 840364872350.dkr.ecr.us-east-1.amazonaws.com/aws-appmesh-envoy:v1.19.1.1-prod
+    profiles: 
+      - prod
 
 volumes:
   my-db:
