--- a/src/ResponseHandler/ResponseHandler.csproj
+++ b/src/ResponseHandler/ResponseHandler.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <RuntimeIdentifiers>linux-x64</RuntimeIdentifiers>
         <SelfContained>true</SelfContained>
+        <PublishReadyToRunUseCrossgen2>true</PublishReadyToRunUseCrossgen2>
         <NoWarn>SA1400;SA1600;SA1205;SA1204;SA1601;SA1201;SA1210;SA1518;SA1633;SA1208;CS1591</NoWarn>
     </PropertyGroup>
 
