--- a/src/ResponseHandler/ResponseHandler.csproj
+++ b/src/ResponseHandler/ResponseHandler.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
         <SelfContained>true</SelfContained>
         <PublishReadyToRun>true</PublishReadyToRun>
@@ -10,9 +11,9 @@
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.SNSEvents" Version="2.0.0" />
         <PackageReference Include="AWSSDK.SQS" Version="3.7.1.36" />
-        <PackageReference Include="Lambdajection" Version="0.8.4" />
-        <PackageReference Include="Lambdajection.Runtime" Version="0.8.4" />
-        <PackageReference Include="Lambdajection.Layer" Version="0.8.4" />
+        <PackageReference Include="Lambdajection" Version="0.9.0-beta2" />
+        <PackageReference Include="Lambdajection.Runtime" Version="0.9.0-beta2" />
+        <PackageReference Include="Lambdajection.Layer" Version="0.9.0-beta2" />
     </ItemGroup>
 
     <ItemGroup>
