--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -162,6 +162,8 @@ Resources:
 
   RestQueue:
     Type: AWS::SQS::Queue
+    Properties:
+      VisibilityTimeout: 60
 
   RestResponseServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
